bugfix - issue #6 - [Bug] Collapsible lists overlap
https://github.com/krzmig/strelloids/issues/6

--- a/content/css/strelloids.css
+++ b/content/css/strelloids.css
@@ -224,7 +224,7 @@
   opacity: 0.8; }
   .list-hidden .list-cards {
     display: none; }
-  .list-hidden .open-card-composer {
+  .list-hidden .card-composer-container {
     display: none; }
   .list-hidden .list-header .list-visibility-switcher::before {
     transform: rotate(90deg); }
